Colab을 통해 생성됨

--- a/1_CodeCells_Basic.ipynb
+++ b/1_CodeCells_Basic.ipynb
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "nNgcmYMAyfTk"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
       "metadata": {
         "id": "iHBZsvrwz9wW"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,6 +145,31 @@
         "outputId": "6e402333-33eb-4ff6-ed16-18a326fda4de"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 1\n",
+        "b = 2\n",
+        "print(a + b)"
+      ],
+      "metadata": {
+        "id": "bDXPZGJ-6sRV",
+        "outputId": "3d483d38-af0d-459a-f546-72b68158ea99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,6 +218,53 @@
     {
       "cell_type": "code",
       "source": [
+        "c = 3\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "id": "H_MOnVAv7Hl1",
+        "outputId": "91d325a3-a39c-4712-e5f3-53e26655ad81",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(c-b)"
+      ],
+      "metadata": {
+        "id": "vBFVgvFR7WAF",
+        "outputId": "f73c47aa-acbb-4cfe-d6fd-b77c412931c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown 🐣 Use a print function and a Boolean operator -\n",
         "print(c-b)"
       ],
@@ -213,6 +285,65 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 100\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "zPut5se37NqV",
+        "outputId": "54b9f0f3-1ad0-4c9a-c7bc-d04f36ba53d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a+b)"
+      ],
+      "metadata": {
+        "id": "r1AC-FGb7ncx",
+        "outputId": "537ae1b4-d0a6-464c-e1f2-820a6549b581",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "102\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a1=1\n",
+        "a2=2"
+      ],
+      "metadata": {
+        "id": "6REhVbpu72N7"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -256,6 +387,76 @@
       "metadata": {
         "id": "81wq2eHidJ0N"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import keyword\n",
+        "keyword.kwlist"
+      ],
+      "metadata": {
+        "id": "jjDP105v8yZE",
+        "outputId": "c78f40bc-3334-4796-fd0c-f065407b693d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['False',\n",
+              " 'None',\n",
+              " 'True',\n",
+              " 'and',\n",
+              " 'as',\n",
+              " 'assert',\n",
+              " 'async',\n",
+              " 'await',\n",
+              " 'break',\n",
+              " 'class',\n",
+              " 'continue',\n",
+              " 'def',\n",
+              " 'del',\n",
+              " 'elif',\n",
+              " 'else',\n",
+              " 'except',\n",
+              " 'finally',\n",
+              " 'for',\n",
+              " 'from',\n",
+              " 'global',\n",
+              " 'if',\n",
+              " 'import',\n",
+              " 'in',\n",
+              " 'is',\n",
+              " 'lambda',\n",
+              " 'nonlocal',\n",
+              " 'not',\n",
+              " 'or',\n",
+              " 'pass',\n",
+              " 'raise',\n",
+              " 'return',\n",
+              " 'try',\n",
+              " 'while',\n",
+              " 'with',\n",
+              " 'yield']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uv9hbez58-0V"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
