Colab을 통해 생성됨

--- a/0_MarkDown4README_md.ipynb
+++ b/0_MarkDown4README_md.ipynb
@@ -50,20 +50,26 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Python Language\n",
+        "#NLP_2024\n",
         "\n",
-        "Learning Python using Colab (Visit Colab homepage) and Github (Visit Github homepage)\n",
+        "#🐹🍦**Python Language**\n",
         "\n",
-        "1. Sign up github (Visit a tutorial on Youtube)\n",
+        "##**Learning Python** using **Colab** ([Visit Colab homepage]()) and **Github** ([Visit Github homepage]())\n",
         "\n",
-        "2. Sign up Google Colaboratory (aka. Colab) (Visit a tutorial on Youtube)\n",
+        "###**1. Sign up github** ([Visit a tutorial on Youtube]())\n",
         "\n",
-        "3. Useful References\n",
+        "###**2. Sign up Google Colaboratory** (aka. Colab) ([Visit a tutorial on Youtube]())\n",
+        "\n",
+        "###**3. Useful References**\n",
         "- Exercises 200 파이썬200제 by 장삼용. 정보문화사 2017\n",
-        "- Jump to Python\n",
-        "- wikidocs for nltk\n",
+        "- [Jump to Python]()\n",
+        "- [wikidocs for nltk]()\n",
         "\n",
-        "4. Markdown Language"
+        "###**4. Markdown Language**\n",
+        "- [Emoji]()\n",
+        "- [Markdown Syntax]()\n",
+        "\n",
+        "###**5. Class Materials**"
       ],
       "metadata": {
         "id": "vFmD4vCTC88r"
