Colab을 통해 생성됨

--- a/2_FiveTypesofData.ipynb
+++ b/2_FiveTypesofData.ipynb
@@ -44,7 +44,7 @@
       "metadata": {
         "id": "UJe7mXf077So"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "-wBr5_M38t9k"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +66,83 @@
       "metadata": {
         "id": "TLkj_GP8Bcn3"
       },
-      "execution_count": 4,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 1"
+      ],
+      "metadata": {
+        "id": "6qxk1oIQrL01"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"I love Sam's pencil case.\""
+      ],
+      "metadata": {
+        "id": "57wqpekerOyT"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a"
+      ],
+      "metadata": {
+        "id": "1JBqLKfNrSW7",
+        "outputId": "f981ff61-92e2-444b-f04a-a5eb85e23b29",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"I love Sam's pencil case.\""
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 24\n",
+        "b = 'string'\n",
+        "c = 'sequence'\n",
+        "d = ['string', 'sequence']\n",
+        "e = ('string', 'sequence')"
+      ],
+      "metadata": {
+        "id": "x__-597RrThU"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hva0DfVQrXuc"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,7 +230,7 @@
         },
         "cellView": "form"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +257,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,7 +306,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +353,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,7 +413,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -371,7 +447,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,7 +488,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,7 +515,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -505,7 +581,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +608,7 @@
       "metadata": {
         "id": "sgheosi7IKxF"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -596,7 +672,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -623,8 +699,46 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Mm3wjlNntDNt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "#@markdown 📌 Assign dictionary data to variables such as k and m.\n",
+        "k = {'Mercury':'수성', 'Venus':'금성', 'Earth':'지구', 'Mars':'화성', 'Jupiter':'목성', 'Saturn':'토성', 'Uranus':'명왕성', 'Neptune':'해왕성'} #key in English : value in Korean\n",
+        "\n",
+        "m = {'Mercury 수성':1, 'Venus 금성':2, 'Earth 지구':3, 'Mars 화성':4, 'Jupiter 목성':5, 'Saturn 토성':6, 'Uranus 명왕성':7, 'Neptune 해왕성':8} # i) order of planets from the Sun, ii) key in English and Korean, iii) value in integers\n",
+        "\n",
+        "print(k)\n",
+        "print(m)"
+      ],
+      "metadata": {
+        "id": "OeaRuLi_sXi1",
+        "outputId": "62b0f6a9-a5fc-4174-db40-e3109a45bcb8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Mercury': '수성', 'Venus': '금성', 'Earth': '지구', 'Mars': '화성', 'Jupiter': '목성', 'Saturn': '토성', 'Uranus': '명왕성', 'Neptune': '해왕성'}\n",
+            "{'Mercury 수성': 1, 'Venus 금성': 2, 'Earth 지구': 3, 'Mars 화성': 4, 'Jupiter 목성': 5, 'Saturn 토성': 6, 'Uranus 명왕성': 7, 'Neptune 해왕성': 8}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#📌 Assign dictionary data to variables such as k and m.\n",
         "\n",
         "k = {'Mercury':'수성', 'Venus':'금성', 'Earth':'지구', 'Mars':'화성', 'Jupiter':'목성', 'Saturn':'토성', 'Uranus':'명왕성', 'Neptune':'해왕성'} #key in English: value in Korean\n",
         "\n",
@@ -655,6 +769,32 @@
     {
       "cell_type": "code",
       "source": [
+        "dict = {'a':1, 'b':2, 'c':3}\n",
+        "print(dict)\n",
+        "print(dict['a'])"
+      ],
+      "metadata": {
+        "id": "NUaduXgIunku",
+        "outputId": "5d1fd732-7c13-4577-e621-51db514d26a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': 1, 'b': 2, 'c': 3}\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown 📌 Print the value of key 'a' ('a' as string data)\n",
         "dict = {'a':1, 'b':2, 'c':3}\n",
         "print (dict)\n",
@@ -675,6 +815,59 @@
           "text": [
             "{'a': 1, 'b': 2, 'c': 3}\n",
             "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict = {'a':1, 'b':2, 'c':3}\n",
+        "dict['a']=7\n",
+        "\n",
+        "print(dict)"
+      ],
+      "metadata": {
+        "id": "J7mvU4dGvnkd",
+        "outputId": "6b4493cf-c0bc-40e0-d608-868ae44b7224",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': 7, 'b': 2, 'c': 3}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict_data={'c':10, 'b':20, 'a':30}\n",
+        "print(dict_data)\n",
+        "dict_data['a']=300\n",
+        "print(dict_data)"
+      ],
+      "metadata": {
+        "id": "9KQO500Sw69w",
+        "outputId": "a6d5c3ba-e52e-4707-df5b-af77ba95b0e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'c': 10, 'b': 20, 'a': 30}\n",
+            "{'c': 10, 'b': 20, 'a': 300}\n"
           ]
         }
       ]
