Colab을 통해 생성됨

--- a/4_1_IfStatement.ipynb
+++ b/4_1_IfStatement.ipynb
@@ -49,6 +49,45 @@
         "if x>y:\n",
         "  print('x is greater than y.')\n",
         "\n",
+        "else:\n",
+        "  print('x is smaller than or equal to y.')"
+      ],
+      "metadata": {
+        "id": "RkdwJnkvoFQ_",
+        "outputId": "bcbdb025-0a6e-4654-dd49-ed762b8727e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x is greater than y.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "akauMDmAoNcG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=100\n",
+        "y=95\n",
+        "\n",
+        "if x>y:\n",
+        "  print('x is greater than y.')\n",
+        "\n",
         "\n",
         "else:\n",
         "  print('x is smaller than or equal to y.')"
@@ -58,6 +97,36 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=0\n",
+        "y=0\n",
+        "\n",
+        "if x>y:\n",
+        "  print('x is greater than y')\n",
+        "\n",
+        "else:\n",
+        "  print('x is smaller than or equal to y')"
+      ],
+      "metadata": {
+        "id": "Vb5JK2ploSCz",
+        "outputId": "b8b7ba7e-649d-4960-b13e-9fb9808f6056",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x is smaller than or equal to y\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -99,6 +168,37 @@
     {
       "cell_type": "code",
       "source": [
+        "x=345\n",
+        "y=678\n",
+        "\n",
+        "if x>y:\n",
+        "  print('x is greater than y.')\n",
+        "\n",
+        "\n",
+        "else:\n",
+        "  print('x is smaller than or equal to y.')"
+      ],
+      "metadata": {
+        "id": "WE9DEbVRoa2i",
+        "outputId": "5f27c5c4-8fd4-4ec2-adf5-bc20cef10428",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x is smaller than or equal to y.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "listdata = ['a', 'b', 'c']\n",
         "if 'a' in listdata:\n",
         "  print ('a가 listdata 안에 있습니다.')\n",
@@ -109,6 +209,33 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "listdata=['a','b','c']\n",
+        "if 'a' in listdata:\n",
+        "  print('a가 listdata 안에 있습니다.')\n",
+        "  print(listdata)"
+      ],
+      "metadata": {
+        "id": "7uaFurHIoi2K",
+        "outputId": "955748a8-0287-417c-8f4c-a89eea93c4a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a가 listdata 안에 있습니다.\n",
+            "['a', 'b', 'c']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
