Colab을 통해 생성됨

--- a/4_3_tryExceptElse_Statement.ipynb
+++ b/4_3_tryExceptElse_Statement.ipynb
@@ -81,6 +81,35 @@
     {
       "cell_type": "code",
       "source": [
+        "try:\n",
+        "  print ('How are you?')\n",
+        "  print (param) #param 변수가 정의되지 않않았으므로 NameError 예외가 발생. 예외가 발생하면 프로그램은 try 블록을 빠져나와 except 블록으로 이동.\n",
+        "\n",
+        "except:\n",
+        "    print('Exception occured') #except 블록에서는 \"Exception occurred\"라는 메시지가 출력된다."
+      ],
+      "metadata": {
+        "id": "AAYpmpUXoyHK",
+        "outputId": "7ae85ce7-99fc-4d39-ce86-7e5d78001627",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How are you?\n",
+            "Exception occured\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 위 2️⃣ 의 예시 (try: ~ except)\n",
         "\n",
         "try:\n",
@@ -99,6 +128,36 @@
         }
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How are you?\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  print('How are you?')\n",
+        "  #print(param) #해당 코드라인 비활성화시켜 param 변수 사용하여 출력 시도 안함.\n",
+        "  #param 변수가 정의되지 않은 것이 없으면 NameError 예외가 발생 안함. 예외가 발생하지 않았음으로 프로그램은 try 블록을 빠져나오지 않고, except 블록으로 이동할 필요도 없음.\n",
+        "\n",
+        "\n",
+        "except:\n",
+        "  print('Exception occurred') #except 블록에서는 \"Exception occurred\"라는 메시지가 출력됨."
+      ],
+      "metadata": {
+        "id": "ZRNNB2oXpIpw",
+        "outputId": "72d9f1b2-9a2d-4350-f477-0294680c5094",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,6 +207,50 @@
     {
       "cell_type": "code",
       "source": [
+        "try:\n",
+        "  print('How are you?')\n",
+        "  print(param) #param 변수를 사용하려고 시도. param 변수가 정의되지 않았으므로, NameError 예외가 발생\n",
+        "\n",
+        "  #예외가 발생할 경우\n",
+        "except:\n",
+        "    print('Exception occurred.') #예외가 발생하면 프로그램은 try 블록을 빠빠져나와 except 블록으로 이동. except 블록에서는 \"Exception occurred\"라는 메시지가 출력,\n",
+        "\n",
+        "  #예외가 발생하지 않았을 경우에만 실행됨. 이 경우 else 블록은 실행되지 않음.\n",
+        "else:\n",
+        "    print('Exception did not occur.')\n",
+        ""
+      ],
+      "metadata": {
+        "id": "s9E4zogwpifD",
+        "outputId": "80765541-1991-44c1-e952-025ee8e46195",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How are you?\n",
+            "Exception occurred.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JXw_O9ZwpiEw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 위 3️⃣  (try: ~ exception: ~ else: 에서 except 부분이 실행되지 않은 예시 )\n",
         "\n",
         "try:\n",
@@ -184,6 +287,40 @@
     {
       "cell_type": "code",
       "source": [
+        "try:\n",
+        "  print('How are you?')\n",
+        "  #print(param) #해당 코드라인 비활성화시켜 param 변수 사용하여 출력 시도 안함.\n",
+        "\n",
+        "  #예외가 발생할 경우\n",
+        "except:\n",
+        "  print('Exception occured.')\n",
+        "\n",
+        "  #예외가 발생하지 않았을 경우에만 실행됨\n",
+        "else:\n",
+        "    print('Exception did not occur.')"
+      ],
+      "metadata": {
+        "id": "R1lOnvfVqEHb",
+        "outputId": "64dadbe7-017f-4077-b451-bab126b257de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How are you?\n",
+            "Exception did not occur.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 위 4️⃣  (try: ~ exception: ~ finally: exeption 예외 발생의 유무에 상관없이 무조건 실행되는 finally 부분 )\n",
         "\n",
         "try:\n",
@@ -201,9 +338,42 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k8-JM-FevYkh",
-        "outputId": "44eff2cb-d0fe-444a-a22c-b614bc446a03"
+        "outputId": "86b59e71-f367-4175-b008-05f8555ae772"
       },
-      "execution_count": null,
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How are you?\n",
+            "Exception occurred.\n",
+            "This code should be running.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  print('How are you?')\n",
+        "  print(param)\n",
+        "\n",
+        "except:\n",
+        "  print('Exception occurred.')\n",
+        "\n",
+        "finally:\n",
+        "  print('This code should be running.')"
+      ],
+      "metadata": {
+        "id": "tE4P9oSFqYCZ",
+        "outputId": "1e0d44cd-42ac-410a-893a-7be4bc03f1da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,12 +403,12 @@
       ],
       "metadata": {
         "id": "UjK2z3ctQd3G",
-        "outputId": "5cddb16c-bd86-49ac-fede-7bf6775ab1a1",
+        "outputId": "3daa5f6f-b7a7-4731-9045-da1166ed4aa0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,6 +419,47 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  print('How are you?')\n",
+        "  #print(param)\n",
+        "\n",
+        "except:\n",
+        "  print('Exception occurred.')\n",
+        "\n",
+        "finally:\n",
+        "  print('This code should be running.')"
+      ],
+      "metadata": {
+        "id": "ECADWYy-qiRR",
+        "outputId": "5c6e0ffe-2ab7-40c9-d97d-e212e391032a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How are you?\n",
+            "This code should be running.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "D-EE1bQgqq6c"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
