Colab을 통해 생성됨

--- a/4_2_ForStatement.ipynb
+++ b/4_2_ForStatement.ipynb
@@ -575,9 +575,9 @@
     {
       "cell_type": "code",
       "source": [
-        "dict2 = {'a':100, 'b':200, 'c':300}\n",
+        "dict1 = {'a':100, 'b':200, 'c':300}\n",
         "\n",
-        "for i in dict2:\n",
+        "for i in dict1:\n",
         "  print(i)"
       ],
       "metadata": {
@@ -585,9 +585,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tR_8K-_UNYX2",
-        "outputId": "34dd54b2-43f8-4a88-e5dd-1077f47ebfc9"
+        "outputId": "79b14eaf-653b-4aa8-bb0a-cb4849894ff9"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,17 +605,17 @@
       "source": [
         "#@markdown 💊 **Compare between print(dictionary['a']) & print(['a']) to print a value, not a key.**\n",
         "\n",
-        "print(dict2['a'])\n",
+        "print(dict1['a'])\n",
         "print(['a'])"
       ],
       "metadata": {
         "id": "PicaMEUyLEBw",
-        "outputId": "312e9a20-d30f-45f1-d5fc-51d92006220d",
+        "outputId": "f045f5c3-bffa-4253-fdee-e40882be76dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -629,29 +629,38 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ex5Z9i7EFWUa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#@markdown 💣 <font color = 'red'>**Indeces are not compatible with dictionary-type data**\n",
         "\n",
-        "print(dict2[0])"
+        "print(dict1[0])"
       ],
       "metadata": {
         "id": "ecRnp5N7LcYX",
-        "outputId": "9adf8b90-fe48-4033-b0ff-60f1b5ea1347",
+        "outputId": "296663a9-6216-43fb-8d09-298e10da4991",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 220
+          "height": 184
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "error",
           "ename": "KeyError",
-          "evalue": "ignored",
+          "evalue": "0",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-17-c3f626750e34>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#@markdown 💣 <font color = 'red'>**Indeces are not compatible with dictionary-type data**\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdict2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-5-5f106ab00b4e>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#@markdown 💣 <font color = 'red'>**Indeces are not compatible with dictionary-type data**\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdict1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mKeyError\u001b[0m: 0"
           ]
         }
@@ -665,12 +674,45 @@
       ],
       "metadata": {
         "id": "1_rjDUvqQpDk",
-        "outputId": "0e258c30-bad6-48ce-87b0-eea9e3812834",
+        "outputId": "93f50b52-5e2c-4798-96a1-334bd82817dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(10):\n",
+        "    print(i)"
+      ],
+      "metadata": {
+        "id": "QFK0bLz0Geeq",
+        "outputId": "1e882100-3c11-4226-bfd9-e26a7577a713",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -704,6 +746,38 @@
       "metadata": {
         "id": "t3GvOWsWQ1bi"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scope=[1,2,3,4,5]\n",
+        "\n",
+        "for i in scope:\n",
+        "    print(i)\n",
+        "    if i<3:\n",
+        "        continue\n",
+        "    else:\n",
+        "        break  #3보다 작은건 아니니까 3이 조건문에 포함됨"
+      ],
+      "metadata": {
+        "id": "pzUi0tKyHEhq",
+        "outputId": "9a2713b7-bc0c-4641-fd2a-79b44d1059c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -787,6 +861,39 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "scope=[1,2,3,4,5]\n",
+        "\n",
+        "for i in scope:\n",
+        "    print(i)\n",
+        "else:\n",
+        "    print('Perfect')"
+      ],
+      "metadata": {
+        "id": "O1HaWLlpIXwz",
+        "outputId": "33ded99c-69a2-4db9-f16e-80b67c1d680b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "Perfect\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## 💊 **Compare! (Do not use in class. Just let students know about it.**"
@@ -808,13 +915,12 @@
       ],
       "metadata": {
         "id": "dHBVuZaLeigp",
-        "outputId": "857a1fa6-269a-4d92-e29e-08924737f877",
+        "outputId": "f6cd75cf-6ce0-442c-b330-b8bc7e516ac1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "cellView": "form"
+        }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
